<resources>
    <string name="app_name">DriverEstimation</string>
    <string name="personal_area_title">Personal Area</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="your_current_password">Your current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="submit">Submit</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="car">car</string>
    <string name="change_photo">Change photo</string>
    <string name="registration">Registration</string>
    <string name="enter_your_email_or_phone_number">Enter your email or phone number</string>
    <string name="your_password">Your password</string>
    <string name="your_password_again">Your password again</string>
    <string name="authentication">Authentication</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="being_first_here_sign_up">Being first here? Sign up!</string>
    <string name="your_name">Your name</string>
    <string name="your_car">Your car</string>
    <string name="log_out">Log out</string>
    <string name="about_app">About app</string>
</resources>