<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/tv_title_style"
        android:text="@string/authentication" />

    <EditText
        android:id="@+id/et_email"
        style="@style/et_change_password_style"
        android:hint="@string/enter_your_email_or_phone_number"
        android:text=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_password"
        style="@style/et_change_password_style"
        android:hint="@string/your_password"
        android:text="" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/tv_link"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/button_style"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/button_style"
        android:text="@string/sign_up" />

    <TextView
        style="@style/tv_other_text"
        android:text="@string/being_first_here_sign_up" />

</LinearLayout>