<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/tv_title_style"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/etCurrPassword"
        style="@style/et_change_password_style"
        android:hint="@string/your_current_password"
        android:text="" />

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/et_change_password_style"
        android:hint="@string/new_password"
        android:text="" />

    <EditText
        android:id="@+id/etNewPasswordAgain"
        style="@style/et_change_password_style"
        android:hint="@string/new_password_again"
        android:text="" />

    <Button
        android:id="@+id/btnSubmitPasswordChange"
        style="@style/button_style"
        android:text="@string/submit" />

</LinearLayout>