<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/tv_title_style"
        android:text="@string/registration" />

    <EditText
        android:id="@+id/et_email"
        style="@style/et_registration_style"
        android:hint="@string/enter_your_email_or_phone_number"
        android:text=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_registration_name"
        style="@style/et_registration_style"
        android:hint="@string/your_name"
        android:text=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_registration_car_name"
        style="@style/et_registration_style"
        android:hint="@string/your_car"
        android:text=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_registration_password"
        style="@style/et_registration_style"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:text="" />

    <EditText
        android:id="@+id/et_registration_password_again"
        style="@style/et_registration_style"
        android:hint="@string/your_password_again"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/btn_registration_submit"
        style="@style/button_style"
        android:text="Submit" />

</LinearLayout>