<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/tv_title_style"
            android:text="@string/personal_area_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@mipmap/ic_profile_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etName"
            style="@style/et_profile_style"
            tools:text="Daniel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etLogin"
            style="@style/et_profile_style"
            tools:text="danil.dobrodeev@mail.ru" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <EditText
            android:id="@+id/etCar"
            style="@style/et_profile_style"
            tools:text="LADA Vesta" />

        <Button
            android:id="@+id/btnEditProfile"
            style="@style/button_style"
            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/btnChangePassword"
            style="@style/button_style"
            android:text="@string/change_password" />
    </LinearLayout>
</LinearLayout>